# zksql

./: LICENSE  README.md  docker_setup.md  local_dev.md  notes.md  pom.xml  setup.sh
code-samples/: create_alice.sh  create_bob.tf  create_bob_and_rob.sh
conf/: setup.global  setup.local-tpch
conf/connections/: tpch-hosts
conf/workload/tpch/: tpch-schema.sql
conf/workload/tpch/queries/: 01.sql  03.sql
dbs/: tpch_zk_bob.sql
src/main/cpp/: .gitignore  CMakeLists.txt  run-alice.sh  run-bob.sh
src/main/cpp/cmake/: FindEMP.cmake  common.cmake
src/main/cpp/common/: defs.h
src/main/cpp/conf/plans/: zk-q1.json  zk-q18.json  zk-q3.json  zk-q5.json  zk-q8.json  zk-q9.json
src/main/cpp/data/: pq_oid_defs.h  psql_data_provider.cpp  psql_data_provider.h
src/main/cpp/expression/: bool_expression.cpp  bool_expression.h  case_node.cpp  case_node.h  comparator_expression_nodes.cpp  comparator_expression_nodes.h  connector_expression_nodes.cpp  connector_expression_nodes.h  expression.h  expression_factory.cpp  expression_factory.h  expression_kind.h  expression_node.cpp  expression_node.h  function_expression.cpp  function_expression.h  generic_expression.cpp  generic_expression.h  math_expression_nodes.cpp  math_expression_nodes.h
src/main/cpp/expression/visitor/: expression_visitor.h  join_equality_condition_visitor.cpp  join_equality_condition_visitor.h  plain_to_secure_visitor.cpp  plain_to_secure_visitor.h  print_expression_visitor.cpp  print_expression_visitor.h  type_inference_visitor.cpp  type_inference_visitor.h
src/main/cpp/operators/: basic_join.cpp  basic_join.h  filter.cpp  filter.h  group_by_aggregate.cpp  group_by_aggregate.h  hash_keyed_join.cpp  hash_keyed_join.h  join.cpp  join.h  operator.cpp  operator.h  project.cpp  project.h  scalar_aggregate.cpp  scalar_aggregate.h  sort.cpp  sort.h  sql_input.cpp  sql_input.h  union.cpp  union.h
src/main/cpp/operators/support/: aggregate_id.h  binary_predicate.h  group_by_aggregate_impl.cpp  group_by_aggregate_impl.h  join_equality_predicate.h  predicate.h  property_tree_expression.cpp  property_tree_expression.h  scalar_aggregate_impl.cpp  scalar_aggregate_impl.h
src/main/cpp/parser/: expression_parser.cpp  expression_parser.h  plan_parser.cpp  plan_parser.h
src/main/cpp/query_table/: plain_tuple.cpp  plain_tuple.h  primitive_plain_tuple.cpp  primitive_plain_tuple.h  query_field_desc.cpp  query_field_desc.h  query_schema.cpp  query_schema.h  query_table.cpp  query_table.h  query_tuple.cpp  query_tuple.h  secure_tuple.cpp  secure_tuple.h  zk_query_table.cpp  zk_query_table.h
src/main/cpp/query_table/field/: field.cpp  field.h  field_factory.cpp  field_factory.h  field_type.h  visitors.cpp  visitors.h
src/main/cpp/test/: CMakeLists.txt  tpch_test.cpp
src/main/cpp/test/support/: tpch_queries.h  zk_base_test.cpp  zk_base_test.h
src/main/cpp/util/: data_utilities.cpp  data_utilities.h  field_utilities.cpp  field_utilities.h  type_utilities.cpp  type_utilities.h  utilities.cpp  utilities.h  zk_global_vars.cpp  zk_global_vars.h  zk_utils.cpp  zk_utils.h
src/main/java/org/vaultdb/: ParseSqlToJson.java
src/main/java/org/vaultdb/codegen/: JSONGenerator.java
src/main/java/org/vaultdb/codegen/sql/: ExtendedRelToSqlConverter.java  SecureRelToSqlConverter.java  SqlGenerator.java
src/main/java/org/vaultdb/config/: ExecutionMode.java  SystemConfiguration.java  WorkerConfiguration.java
src/main/java/org/vaultdb/db/schema/: SystemCatalog.java
src/main/java/org/vaultdb/executor/config/: ConnectionManager.java
src/main/java/org/vaultdb/parser/: SqlStatementParser.java  TreeBuilder.java
src/main/java/org/vaultdb/plan/: SecureRelNode.java  SecureRelRoot.java
src/main/java/org/vaultdb/plan/operator/: Aggregate.java  AttributeResolver.java  CommonTableExpressionScan.java  Distinct.java  Filter.java  Join.java  Operator.java  OperatorFactory.java  Project.java  SeqScan.java  Sort.java  Update.java  WindowAggregate.java
src/main/java/org/vaultdb/type/: SecureRelDataTypeField.java  SecureRelRecordType.java  TypeMap.java
src/main/java/org/vaultdb/util/: CommandOutput.java  FileUtilities.java  Utilities.java
zk-set/: CMakeLists.txt
zk-set/cmake/: emp-zk-set-config.cmake
zk-set/emp-zk-set/: poly_prdt.h  zk_set.h  zk_set_disjoint.hpp  zk_set_equal.hpp  zk_set_intersection.hpp  zk_set_subset.hpp  zk_set_union.hpp  zk_set_utils.hpp
zk-set/test/: set_disjoint.cpp  set_equality.cpp  set_subset.cpp  set_utils.cpp  svole.cpp
